--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
             <div class="col-sm-12 col-lg-6">
                 <h3>GURKEMEJE</h3>
-                <p>Gurkemeje har en fantastisk antibakteriel effekt, som blandt andet nedsætter bakterieinfektionen, når du har et sår. Er dit immunforsvar svækket eller nedbrudt, er du mere udsat for sygdomme. Dette kan lede til øget inflammation i kroppen, som kan være ganske belastende. Undersøgelser viser imidlertid, at curcumin kan nedsætte og regulere mængden af pro-inflammatoriske stoffer - altså de stoffer, der normalt øger inflammation i kroppen. Ved at skabe balance blandt disse stoffer er curcumin med til at forebygge sygdomme og bygge et svækket immunsystem op igen.</p>
+                <p>Det mest interessante ved gurkemeje er rodens indhold af stoffet curcumin. Det er nemlig præcis dette stof, som har flest sundhedsfremmende evner. Det er også dette stof, som har rigtig gode anti-inflammatoriske evner. Inflammation opstår, når fremmede stoffer kommer ind i kroppen. Inflammation er egentlig bare betændelse i daglig tale. Og så kan det bygge et svækket immunsystem op igen.</p>
             </div>
 
             <div class="col-sm-12 col-lg-6">
@@ -122,7 +122,7 @@
 
             <div class="col-sm-12 col-lg-6">
                 <h3>KUL</h3>
-                <p>Aktivt kul er en naturlig behandling, som bruges til at fange giftstoffer og kemikalier i kroppen, hvormed de kan skylles ud, så kroppen ikke optager dem igen. </p>
+                <p>Aktivt kul er en naturlig behandling, som bruges til at fange giftstoffer og kemikalier i kroppen, hvormed de kan skylles ud, så kroppen ikke optager dem igen. Aktivt kul hjælper med at fremme en sund fordøjelseskanal, for det fjerner de giftstoffer, der medfører allergiske reaktioner, oxidativ skade og et dårligt immunforsvar. Når du fjerner giftstofferne fra dit system, kan du således reducere ledsmerter, få mere energi og fungerer bedre mentalt.</p>
             </div>
 
 
