--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <div id="carousel">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner col-sm-12 col-md-9 col-lg-7 col-xl-7">
+                <div class="carousel-inner col-sm-12 col-md-9 col-lg-7 offset-md-3 col-xl-6">
 
                     <div class="carousel-item active">
                         <img class="d-block w-100" src="img/first_can.png" alt="First slide">
