--- a/index.html
+++ b/index.html
@@ -103,9 +103,17 @@
             </div>
         </section>
 
+        <section id="infografik" class="row">
+
+            <div class="col-sm-12 offset-md-2 col-md-8 off-set-col col-xl-6">
+                <img src="img/infografik1.png" alt="vitamin vand produktion">
+            </div>
+
+        </section>
+
         <section id="produkter" class="row">
 
-            <div class="col-sm-12">
+            <div class="col-sm-12 col-md-12">
                 <h2>VORES PRODUKTER</h2>
                 <p>I alle vores variationer findes der stoffer og vitaminer som bl.a. biotin, b-, c- og d-vitamin.</p>
             </div>
@@ -242,6 +250,10 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- LightWidget WIDGET -->
+        <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/169576bdbb135296a42aa1b0cb4c2581.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;" class="instagram"></iframe>
 
 
     </main>
