--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name=“description” content=“Simple er en energigivende vitamindrik, som giver dig vitaminer og mineraler til at give dig en energifyldt dag”>
+    <meta name=“keywords” content=“vitamindrik,vitamin,vitaminer,energi,energiboost,genbrug,vitaminvand,miljøvenligt,kombucha,matcha,gurkemeje,kul,rensende,mineraler,d-vitamin,c-vitamin,b-vitamin”>
+
     <title>SIMPLE</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -89,10 +93,9 @@
                 <img class="img-fluid" src="img/first_can.png" alt="energigivende vitaminvand med massere af vitaminer">
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                <h5>NOT JUST ANOTHER VITAMINWATER</h5>
+                <h5>IKKE BARE ENDNU EN VITAMINDRIK</h5>
             </div>
         </section>
-
 
         <section id="om" class="row">
             <div class="col-sm-12">
@@ -103,6 +106,13 @@
             </div>
         </section>
 
+
+        <aside class="iframe-from-fb">
+            <img src="img/infografik1.png" alt="vitamin vand produktion">
+        </aside>
+        <img class="fb-news-toggle-button" src="img/arrow.png" alt="infografik for vitamindrik simple">
+
+        <!--
         <section id="infografik" class="row">
 
             <div class="col-sm-12 offset-md-2 col-md-8 off-set-col col-xl-6">
@@ -110,6 +120,7 @@
             </div>
 
         </section>
+-->
 
         <section id="produkter" class="row">
 
@@ -264,8 +275,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <script src="script.js"></script>
 </body></html>
